Inital commit for diagnostics

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,5 @@ name: LaresLogger
 version: '${project.version}'
 main: io.curiositycore.lareslogger.LaresLogger
 api-version: 1.19
-softdepend:
+depend:
   - Vulcan
