--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 
     <repositories>
         <repository>
+            <id>local-maven-repo</id>
+            <url>file:///${project.basedir}/localrepobin/vulcanapi/local-maven-repo</url>
+        </repository>
+        <repository>
             <id>papermc-repo</id>
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
@@ -61,19 +65,20 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.19.4-R0.1-SNAPSHOT</version>
+            <version>1.19.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>me.frap.vulcan.api</groupId>
             <artifactId>VulcanAPI</artifactId>
-            <version>1.0</version>
+            <version>2.6.9</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
